fixed submenu dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -178,6 +178,11 @@ html.dark {
   background-color: black;
   text: white;
 }
+
+.dark .submenu {
+  background-color: black;
+  text: white;
+}
   
 @view-transition {
     navigation: auto;
